actually added the changes that are supposed to fix text overflowing lol

--- a/client/static/modern.css
+++ b/client/static/modern.css
@@ -203,7 +203,7 @@
 }
 
 .card h5{
-    font-size: 2rem;
+    font-size: 30px;
 }
 
 #discard{
